

Proposed Features currently scheduled targeted for this subrelease:
- full AAX Companion API integration
- waveform envelope overview (previous draft had been temporarily removed until after ARA 2.0 release)


Changes since previous releases:
- initial draft of Audio Unit version 3 support (App Extension, incl. IPC when not loaded in-process)
- required minimum CMake version increased from 3.4 to 3.19 (same as VST3)


=== ARA SDK 2.2 release (aka 2.2.001) (2022/11/07) ===
- added surround support for audio sources
- added API to determine whether an audio modification actually modifies the underlying audio source


=== ARA SDK 2.1 release (aka 2.1.001) (2022/01/06) ===
- finalized ARM support for Apple Silicon
- enable ARA audio file chunk authoring directly in the host


=== ARA SDK 2.0 release (aka 2.0.001) (2021/05/03) ===
- outdated documentation for ARAFactory::factoryID fixed, related chapter "Managing ARA Archives" rewritten
- clarified undo stack handling if host edits trigger follow-up updates in the plug-in
- clarified threading constraints for creating/destroying ARA plug-in instances
- clarified intended use cases and optimization criteria for ARA audio file chunks
- clarified possible line feeds in base64 encoding of ARA audio file chunk archive data
- added dedicated section about "Preview Rendering" to "Configuring The Rendering" in chapter "Implementing ARA"
- various minor documentation cleanups/improvements

ARA SDK 2.0 draft 14 (aka 1.9.14) (2021/02/26)
- applied Apache License 2.0
- processing algorithm selection draft finalized for release
- added API for license management if using ARA plug-ins without UI as analysis or time-stretch engine
- clarified how to support multiple ARA audio processors in a single VST3 binary (e.g. WaveShell)
- clarified life time of ARAFactory pointers obtained through ARA::IPlugInEntryPoint or ARA::IMainFactory
- drafted ARM support (still experimental and bound to change in incompatible ways!)